data/derived/fa15/progs/unify/prog3701.ml.out
Characters 64-66:
  assert (-1.0 <= rv && rv <= 1.0);
                  ^^
Error: This expression has type string but an expression was expected of type
         float
